--- a/src/Like.css
+++ b/src/Like.css
@@ -1,3 +1,13 @@
 .Like {
-    padding: 1em;
+    padding: 1em 1em 0 1em;
+}
+button {
+    border: 2px solid #008080;;
+    padding: .5em 1em;
+    margin: .5em;
+    background-color: transparent;
+    border-radius: 4px;
+}
+button:hover {
+    background-color: #008080;
 }
